--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS=-I m4
 
-EXTRA_DIST = autogen.sh ChangeLog README.md LICENSE DISCLAIMER
+EXTRA_DIST = autogen.sh ChangeLog README.md LICENSE
 
 AM_CPPFLAGS = -Wall -Werror 
 AM_CPPFLAGS += -fPIC -pipe  -O -Wall -Wextra -Wpointer-arith -Wno-unused-parameter -Wno-deprecated-declarations -Wno-unused-function -Wno-ignored-qualifiers
@@ -9,11 +9,17 @@ AM_LDFLAGS = --coverage
 
 LDADD = $(CODE_COVERAGE_LIBS)
 
+includesubdir = $(includedir)/oauth2
+
+includesub_HEADERS = \
+	src/liboauth2-sts/include/oauth2/sts.h
+
 lib_LTLIBRARIES = @PACKAGE_NAME@.la
 
 @PACKAGE_NAME@_la_CFLAGS = @OAUTH2_CFLAGS@ @OAUTH2_NGINX_CFLAGS@ @NGINX_CFLAGS@ @XML_CFLAGS@ -Isrc/liboauth2-sts/include
 @PACKAGE_NAME@_la_LIBADD = @OAUTH2_LIBS@ @OAUTH2_NGINX_LIBS@ @NGINX_LIBS@ @XML_LIBS@ 
 @PACKAGE_NAME@_la_SOURCES = \
+	src/liboauth2-sts/src/sts_int.h \
 	src/liboauth2-sts/src/sts.c \
 	src/liboauth2-sts/src/wstrust.c \
 	src/liboauth2-sts/src/ropc.c \
