--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ includesub_HEADERS = \
 
 lib_LTLIBRARIES = @PACKAGE_NAME@.la
 
-@PACKAGE_NAME@_la_CFLAGS = @OAUTH2_CFLAGS@ @OAUTH2_NGINX_CFLAGS@ @NGINX_CFLAGS@ @XML_CFLAGS@ -Isrc/liboauth2-sts/include
+@PACKAGE_NAME@_la_CFLAGS = @OAUTH2_CFLAGS@ @OAUTH2_NGINX_CFLAGS@ @NGINX_CFLAGS@ @XML_CFLAGS@ -I${srcdir}/src/liboauth2-sts/include
 @PACKAGE_NAME@_la_LIBADD = @OAUTH2_LIBS@ @OAUTH2_NGINX_LIBS@ @NGINX_LIBS@ @XML_LIBS@ 
 @PACKAGE_NAME@_la_SOURCES = \
 	src/liboauth2-sts/src/sts_int.h \
