--- a/.cproject
+++ b/.cproject
@@ -35,6 +35,8 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.include.paths.811285626" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/liboauth2/include}&quot;"/>
 									<listOptionValue builtIn="false" value="/opt/homebrew/include"/>
+									<listOptionValue builtIn="false" value="/usr/local/include"/>
+									<listOptionValue builtIn="false" value="/Library/Developer/CommandLineTools/usr/lib/clang/16/include"/>
 									<listOptionValue builtIn="false" value="/Users/hzandbelt/projects/nginx/src/core"/>
 									<listOptionValue builtIn="false" value="/Users/hzandbelt/projects/nginx/src/http"/>
 									<listOptionValue builtIn="false" value="/Users/hzandbelt/projects/nginx/src/os/unix"/>
@@ -42,7 +44,6 @@
 									<listOptionValue builtIn="false" value="/Users/hzandbelt/projects/nginx/src/http/modules"/>
 									<listOptionValue builtIn="false" value="/Users/hzandbelt/projects/nginx/src/http/v2"/>
 									<listOptionValue builtIn="false" value="/Users/hzandbelt/projects/nginx/objs"/>
-									<listOptionValue builtIn="false" value="/Library/Developer/CommandLineTools/SDKs/MacOSX13.sdk/usr/include/"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1754841162" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
